test/errors/arc/destructor_parameters_fail.hy
// destructors must not declare parameters

class DestructorWithParams
{
    DestructorWithParams() {}
    ~DestructorWithParams(int code) {}
}

int main()
{
    DestructorWithParams value = DestructorWithParams()
    return 0
}